# idbsocialdatapy

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml  setup.py
.github/workflows/: main.yml  publish.yml
idbsocialdatapy/: __init__.py  core.py  metadata.py  utils.py
tests/: test_core.py  test_metadata.py  test_utils.py
