[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "idbsocialdatapy"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pandas>=1.5.1",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
  "pytest>=7.2.0"
]
dev = [
    "autoflake >=1.7.7",
    "flake8 >=5.0.4",
    "pre-commit >=2.20.0",
    "python-semantic-release >= 7.32.2"
]

[project.urls]
Homepage = "https://github.com/EL-BID/idbsocialdatapy"

[tool.hatch.version]
path = "idbsocialdatapy/__init__.py"

[tool.semantic_release]
version_variable = [
    'idbsocialdatapy/__init__.py:__version__'
]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "python -m pip install --upgrade build && python -m build"
dist_path = "dist/"
upload_to_pypi = false
remove_dist = false
